# Hand-Gesture-Recognition

./: README.md  main.py  pyproject.toml
docs/: شرح المشروع.docx
notebooks/: keypoint_classification_EN.ipynb
